--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-    <string name="app_name">Inventory-App</string>
+    <string name="app_name">Inventory App</string>
+
+    <string name="empty_view_text">It\'s a bit lonely here.</string>
+
+    <string name="action_insert_dummy_data">Insert Dummy Data</string>
+
+    <string name="action_delete_all_items">Delete All Items</string>
+
+    <string name="action_save">Save</string>
+
+    <string name="action_delete">Delete</string>
 </resources>
